[package]
name = "problem_03"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
futures = "0.3.28"
tokio = { version = "1.14.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
tracing = "0.1.38"
tracing-subscriber = "0.3.17"
