[package]
name = "problem_06"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "bin/client.rs"

[[bin]]
name = "server"
path = "bin/server.rs"

[dependencies]
bytes = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
